<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity"
    android:background="@color/background">
    <!--Logo-->

    <LinearLayout
        android:layout_marginTop="30sp"
        android:id="@+id/logoLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_alignParentTop="true">

        <ImageView
            android:layout_width="@dimen/logo_w"
            android:layout_height="@dimen/logo_h"
            android:src="@drawable/ic_logo" />

    </LinearLayout>

    <!--Sign Up Form-->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logoLayout">

        <LinearLayout
            android:id="@+id/sin_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:orientation="vertical"
            android:padding="20sp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ibmplexsansmedium"
                android:text="@string/create_account"
                android:textColor="@color/textPrimary"
                android:textSize="40sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ibmplexsansitalic"
                android:text="@string/sup_screen_text"
                android:textColor="@color/textSecondary"
                android:textSize="18sp" />

            <!--Text Fields-->


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15sp"
                android:layout_marginTop="25sp"
                android:layout_marginBottom="7sp"
                android:fontFamily="@font/ibmplexsanssemibold"
                android:text="@string/name"
                android:textColor="@color/textSecondary" />

            <EditText
                android:id="@+id/name_sup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="name"
                android:background="@drawable/edittextbg"
                android:drawablePadding="15sp"
                android:hint="@string/sample_name"
                android:inputType="textPersonName"
                android:padding="20sp"
                android:textColor="@color/primary"
                android:textColorHint="@color/textSecondary" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15sp"
                android:layout_marginTop="10sp"
                android:layout_marginBottom="7sp"
                android:fontFamily="@font/ibmplexsanssemibold"
                android:text="@string/phn"
                android:textColor="@color/textSecondary" />

            <EditText
                android:id="@+id/phone_sup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="phone"
                android:background="@drawable/edittextbg"
                android:drawablePadding="15sp"
                android:fontFamily="@font/ibmplexsansregular"
                android:hint="@string/sample_phn"
                android:inputType="phone"
                android:maxLength="10"
                android:padding="20sp"
                android:textColor="@color/primary"
                android:textColorHint="@color/textSecondary"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15sp"
                android:layout_marginTop="10sp"
                android:layout_marginBottom="7sp"
                android:fontFamily="@font/ibmplexsanssemibold"
                android:text="@string/full_address"
                android:textColor="@color/textSecondary" />

            <EditText
                android:id="@+id/address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittextbg"
                android:drawablePadding="15sp"
                android:fontFamily="@font/ibmplexsansregular"
                android:hint="@string/sample_address"
                android:inputType="textMultiLine"
                android:maxLength="9"
                android:padding="20sp"
                android:textColor="@color/primary"
                android:textColorHint="@color/textSecondary"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15sp"
                android:layout_marginTop="10sp"
                android:layout_marginBottom="7sp"
                android:fontFamily="@font/ibmplexsanssemibold"
                android:text="@string/sample_pincode"
                android:textColor="@color/textSecondary" />

            <EditText
                android:id="@+id/zipcode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="phone"
                android:background="@drawable/edittextbg"
                android:drawablePadding="15sp"
                android:fontFamily="@font/ibmplexsansregular"
                android:hint="@string/pincode"
                android:inputType="phone"
                android:maxLength="6"
                android:padding="20sp"
                android:textColor="@color/primary"
                android:textColorHint="@color/textSecondary"
                android:textSize="20sp" />


            <!--Submit Button-->
            <Button
                android:id="@+id/sin_lS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:background="@drawable/buttonbg"
                android:drawableEnd="@drawable/rightarrow"
                android:fontFamily="@font/ibmplexsansmedium"
                android:gravity="left"
                android:onClick="verifyUser"
                android:padding="20sp"
                android:text="@string/get_verification_code"
                android:textAllCaps="false"
                android:textColor="@color/primaryOpposite"
                android:textSize="20sp"
                tools:ignore="UsingOnClickInXml" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/ibmplexsansregular"
                    android:text="@string/already_have_an_account"
                    android:textColor="@color/textSecondary"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/sup_lS"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="7dp"
                    android:fontFamily="@font/ibmplexsanssemibold"
                    android:onClick="signIn"
                    android:text="@string/sign_in"
                    android:textColor="@color/accent_secondary"
                    android:textSize="17sp" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>